# slag-gun

./: .hgignore  deploy.bat  run.bat  test.txt
client/: ant.bat  build.xml  compile.bat  flex-config.xml  make.bat  mxml-manifest.xml  pom-flex.xml  pom.xml
client/src/com/example/quickstart/: Greeter.as  Greeter_mx.mxml
client/src/com/slaggun/: BotShooter.as  Cursors.as  Game.as  GameActors.as  GameEnvironment.as  GameEvent.as  GameNetworking.as  GameRenderer.as  GameService.as  Global.as  InputState.as  Launcher.mxml  LauncherClass.as  Luncher.mxml  LuncherClass.as  Monitors.as  Timer.as  Timestamp.as
client/src/com/slaggun/amf/: AmfSerializer.as
client/src/com/slaggun/events/: AMFRecievedEvent.as  ActorSnapshot.as  BaseActorSnapshot.as  BaseGameEvent.as  ClientDisconnectedEvent.as  DataRecievedEvent.as  (+9 more)
client/test/: TestRunner.mxml
client/test/com/slaggun/: AllTests.as  SimpleTest.as
haskell-client/: slaggun.cabal
haskell-client/src/: Main.hs  SlagGun.hs
lib/ant/: ant-version.txt
lib/flex/: AIR SDK Readme.txt  license-adobesdk-fr.htm  license-adobesdk.htm
lib/flex/include/: FlashRuntimeExtensions.h
lib/flex_sdk/: README.txt
lib/maven/: maven-version.txt
server/: build.xml  pom.xml  run.bat
server/config/: log4j.xml  server.properties
server/flash_policy/: flashpolicy.py  policy.xml  readme.txt  start.bat
server/src/com/slaggun/: Client.java  GameClient.java  Main.java
server/src/main/resources/: log4j.properties
utils/src/com/slaggun/: CombineImages.java
web-app/: mvn.bat  pom.xml  run.bat
web-app/src/main/webapp/: index.jsp
(+202 files in other folders)
