name: slaggun
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer: Oleksiy Dyagilev aka.fe2s@gmail.com
build-depends: GLUT -any, OpenGL -any, base -any, containers -any
stability:
homepage: http://code.google.com/p/slag-gun/
package-url:
bug-reports:
synopsis:
description: .
category:
author: Oleksiy Dyagilev
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: slaggun
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: